--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orden de compra</title>
-    <script src="script.js"></script>
-
+    
     <h1>ALMACEN DE COMPUTADORES</h1>
         <H3>Almacén de computadores</H3>
+
+        <link rel="stylesheet" href="./Style/style.css">
 </head>
 <body>
-    
+<script src="./Script/script.js"></script>
     <main>
         <div>
             <form id="comp-form">
