--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -65,10 +65,15 @@
 
                 </form>
             
+        <div></div>
+        <p id="resultado"></p>
 
+        </div>
 
         </div>
     </main>
+
+    <footer></footer>
 
 </body>
 </html>
