--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <input id="inputValCompra" placeholder="$" class="controlForma" readonly> <br><br>
                 <label>Valor del descuento</label><br>
                 <input id="inputValDescuento" placeholder="$" class="controlForma" readonly> <br><br>
-                <label>Total</label><br>
+                <label>Total a pagar</label><br>
                 <input id="inputValTotal" placeholder="$" class="controlForma" readonly> <br><br>
             </form>
         </div>
