--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <div id="cantComputadores">
             <div id="cantCompra">
-                <label>Cantidad de computadores comprados</label><br>
+                <label class="controlLabel">Cantidad de computadores comprados</label><br>
                 <input id="inputCantComp" class="controlForma" placeholder="Ingrese la cantidad de computadores que adquirió"><br>
             </div>
             <div>
@@ -28,11 +28,11 @@
 
         <div id="resultados">
             <form id="valores">
-                <label>Valor de la compra</label><br>
+                <label class="controlLabel">Valor de la compra</label><br>
                 <input id="inputValCompra" placeholder="$" class="controlForma" readonly> <br><br>
-                <label>Valor del descuento</label><br>
+                <label class="controlLabel">Valor del descuento</label><br>
                 <input id="inputValDescuento" placeholder="$" class="controlForma" readonly> <br><br>
-                <label>Total a pagar</label><br>
+                <label class="controlLabel">Total a pagar</label><br>
                 <input id="inputValTotal" placeholder="$" class="controlForma" readonly> <br><br>
             </form>
         </div>
