--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="contenedor">
         <header>
-            <h1>Almacen de computadores</h1>
+            <h1>Computrack</h1>
             <h4>Almacen de computadores</h4>
         </header>
         <main>
@@ -43,6 +43,7 @@
             </div>
         </main>
         <footer>
+            <p> Desarrollado por Ilan Diaz</p>
 
         </footer>
     </div>
