ADD adn MODIFICACION
Home page HTML
Style hombre page CSS
Modificacion css formulario
Modificacion html formulario

--- a/computrack-formulario.html
+++ b/computrack-formulario.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="./Style/style.css">
+    <link rel="stylesheet" href="./Style/style-formulario.css"
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimum-scale=1.0">
@@ -12,8 +12,16 @@
 <body>
     <div class="contenedor">
         <header>
-            <h1>Computrack</h1>
-            <h4>Almacen de computadores</h4>
+            <div class="contenedor">
+                <div class="Logo">
+                    <p id="textLogo">COMPUTRACK</p>
+                </div>
+                <nav id="nav-bar">
+                    <ul>
+                        <li> <a class="navLink" href="computrack-homepage.html">Inicio</a></li>
+                        <li> <a class="navLink" href="computrack-formulario.html">Cotiza con nosotros</a></li>
+                    </ul>
+                </nav>
         </header>
         <main>
             <div id="cantComputadores">
